ConsolidadoService
